# csv-editor

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: sessions.md
docs/plans/: 2026-03-03-design-system-migration-design.md  2026-03-03-design-system-migration.md  2026-03-03-rename-to-jolt-tables-design.md  2026-03-03-rename-to-jolt-tables.md  2026-03-04-header-toggle-context-menu-design.md  2026-03-04-header-toggle-context-menu.md  2026-03-05-remove-toolbar-find-bar-design.md  2026-03-05-remove-toolbar-find-bar.md
docs/weekly/: 2026-03-03-design-system-migration.md
src/: App.css  App.tsx  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CommandBar.css  CommandBar.tsx  ContextMenu.css  ContextMenu.tsx  DataGrid.css  DataGrid.tsx  FindBar.css  FindBar.tsx  Toast.css  Toolbar.css  Toolbar.tsx
src/services/: csv.ts  fileOps.ts
src/styles/: fonts.css  tokens.css
