[package]
name = "csv-editor"
version = "0.1.0"
description = "A CSV Editor built with Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "csv_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
