[package]
name = "jolt-tables"
version = "0.1.0"
description = "A desktop table editor built with Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "jolt_tables_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
